Updated metal-detector.sh